--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Assignment</title>
+    <title>Assignment 01</title>
+    <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
+    <header class="flex items-center justify-between h-24 px-4 bg-gray-50">
+        <div class="text-gray-500">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                class="inline-block w-8 h-8">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+            <span>lorem ipsum</span>
+        </div>
+
+        <button class="h-10 px-6 py-2 text-sm font-semibold text-white bg-indigo-600 rounded hover:bg-indigo-500">+ New
+            Project</button>
+    </header>
 
 
 </body>
+
 </html>
