--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,51 @@
 </head>
 
 <body>
-    <header class="flex items-center justify-between h-24 px-4 bg-gray-50">
-        <div class="text-gray-500">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                class="inline-block w-8 h-8">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-            <span>lorem ipsum</span>
+    <div class="grid min-h-screen grid-flow-col gap-0 bg-green-300 grid-rows-layout grid-cols-layout auto-cols-layout">
+
+        <header class="flex items-center justify-between px-4 bg-gray-100 col-span-full">
+            <!-- logo -->
+            <div class="text-gray-500">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                    class="inline-block w-8 h-8">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+                <span>lorem ipsum</span>
+            </div>
+
+            <button
+                class="h-10 px-6 py-2 text-sm font-semibold text-white bg-indigo-600 rounded w-30 hover:bg-indigo-500">
+                + New Project
+            </button>
+        </header>
+
+        <aside class="flex flex-col items-center p-4 space-y-4 bg-white">
+            <button class="w-40 h-10 px-6 font-semibold text-white bg-indigo-600 rounded hover:bg-indigo-500">Project X</button>
+
+            <button class="w-40 h-10 px-6 font-semibold text-white bg-gray-600 rounded hover:bg-gray-500 ">Project Y</button>
+        </aside>
+
+        <div class="flex flex-col items-stretch p-4 space-y-4 bg-gray-200">
+            <h2 class="self-start font-bold">To do</h2>
+
+            <div class="h-20 px-6 py-3 bg-white rounded">Task 1</div>
+            <div class="h-20 px-6 py-3 bg-white rounded">Task 2</div>
         </div>
 
-        <button class="h-10 px-6 py-2 text-sm font-semibold text-white bg-indigo-600 rounded hover:bg-indigo-500">+ New
-            Project</button>
-    </header>
+        <div class="flex flex-col items-stretch p-4 space-y-4 bg-blue-200">
+            <h2 class="self-start font-bold">In progress</h2>
 
+            <div class="h-20 px-6 py-3 bg-white rounded">Task 5</div>
+        </div>
+
+        <div class="flex flex-col items-stretch p-4 space-y-4 bg-green-300">
+            <h2 class="self-start font-bold">Done</h2>
+
+            <div class="h-20 px-6 py-3 bg-white rounded">Task 3</div>
+            <div class="h-20 px-6 py-3 bg-white rounded">Task 4</div>
+        </div>
+    </div>
 
 </body>
 
